[Feature] Initial Signup / Account Creation (#23)
* Initial account structure
* Initial signup and login with KeyCloak
* Updated dependencies
* Added CI Badge
